--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <title>🤫 수상한 테트리스</title>
-    <link rel="stylesheet" href="style.css?v=20251016_12"> 
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css?v=20251016_14"> 
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght400;700&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -49,6 +49,6 @@
         
     </div>
     
-    <script src="game.js?v=20251016_12"></script>
+    <script src="game.js?v=20251016_14"></script>
 </body>
 </html>
