--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
 
     <div id="selector-screen">
-        <h1>접속 환경을 선택해 주세요</h1>
-        <button class="select-button" onclick="window.loadGame('pc')">💻 PC 환경 (키보드)</button>
+        <h1>접속 환경</h1>
+        <button class="select-button" onclick="window.loadGame('pc')">💻 PC 환경 (키보드(모바일로 하나 pc로하나 똑같음))</button>
         <button class="select-button" onclick="window.loadGame('mobile')">📱 모바일 환경 (터치)</button>
     </div>
 
@@ -52,3 +52,4 @@
     <script src="game.js?v=20251016_14"></script>
 </body>
 </html>
+
